fixed scroll on iphone

--- a/src/app/components/scroll/scroll.component.scss
+++ b/src/app/components/scroll/scroll.component.scss
@@ -1,5 +1,6 @@
 ::ng-deep {
   .fs-scroll {
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
   }
 }
